# tinyjson

./: CMakeLists.txt  Doxyfile  Makefile  README.md  json.c  json.h  main.c
.github/workflows/: cmake-multi-platform.yml
docs/: __export_8h.html  __export_8h_source.html  annotated.html  classes.html  dir_4a70653667a55d1e94824db751343ae8.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d74dc606aefb8bed774b8ee66148f01f.html  doxygen_crawl.html  export_8h.html  export_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  json_8c.html  json_8h.html  json_8h_source.html  menudata.js  struct___s___j_array-members.html  struct___s___j_array.html  struct___s___j_memory_pool-members.html  struct___s___j_memory_pool.html  struct___s___j_object-members.html  struct___s___j_object.html  struct___s___j_pool_manager-members.html  struct___s___j_pool_manager.html  struct___s___j_property-members.html  struct___s___j_property.html  struct___s___j_value-members.html  struct___s___j_value.html
docs/search/: all_0.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_d.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js  variables_5.js  variables_9.js  variables_a.js  variables_c.js
include/tinyjson/: json.h
source/: CMakeLists.txt  json.c
tests/: CMakeLists.txt  unit.c
tinyjson/: CMakeLists.txt  Makefile  _export.h  json.c  json.h
